--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.3.1"
+            "dev-master": "1.3.1-dev"
         }
     }
 }
